--- a/application/admin/view/branch/county_add.html
+++ b/application/admin/view/branch/county_add.html
@@ -31,6 +31,13 @@
 				</div>
 			</div>
 			<div class="layui-form-item">
+				<label class="layui-form-label">排序</label>
+				<div class="layui-input-block">
+					<input type="text" id="name" name="region_sort" autocomplete="off"
+						placeholder="数值越大越靠前" class="layui-input">
+				</div>
+			</div>
+			<div class="layui-form-item">
 				<div class="layui-input-block">
 					<button class="layui-btn" lay-submit lay-filter="toSubmit">提交</button>
 					<button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
