--- a/application/admin/view/review/detail.html
+++ b/application/admin/view/review/detail.html
@@ -18,7 +18,7 @@
 				<div class="layui-form-item">
 					<label class="layui-form-label">评论人</label>
 					<div class="layui-input-block">
-						<input id="reviewer" name="reviewer" disabled autocomplete="off" value="{$data.reviewer}"
+						<input id="uname" name="uname" disabled autocomplete="off" value="{$data.uname}"
 							class="layui-input" disabled="disabled" />
 					</div>
 				</div>
@@ -32,22 +32,22 @@
 				<div class="layui-form-item logo">
 					<label class="layui-form-label">评论图片</label>
 					{volist name='img' id='vo'}
-					<div class="layui-input-inline" style="display: flex;">
-						<img class="layui-upload-img" id="logo_img" src="{$vo}" />
+					<div class="layui-input-inline" style="display: flex;width: 80px;">
+						<img class="layui-upload-img" id="logo_img" src="{$vo.comment_img}" />
 					</div>
 					{/volist}
 				</div>
 				<div class="layui-form-item">
 					<label class="layui-form-label">设计得分</label>
 					<div class="layui-input-block">
-						<input id="design_code" name="design_code" disabled autocomplete="off" value="{$data.design_code}"
+						<input id="design_point" name="design_point" disabled autocomplete="off" value="{$data.design_point}"
 							class="layui-input" disabled="disabled" />
 					</div>
 				</div>
 				<div class="layui-form-item">
 					<label class="layui-form-label">服务得分</label>
 					<div class="layui-input-block">
-						<input id="service_code" name="service_code" disabled autocomplete="off" value="{$data.service_code}"
+						<input id="service_point" name="service_point" disabled autocomplete="off" value="{$data.service_point}"
 							class="layui-input" disabled="disabled" />
 					</div>
 				</div>
@@ -55,15 +55,15 @@
 				<div class="layui-form-item">
 					<label class="layui-form-label">贴心得分</label>
 					<div class="layui-input-block">
-						<input id="intimate_code" name="intimate_code" disabled autocomplete="off" value="{$data.intimate_code}"
+						<input id="care_point" name="care_point" disabled autocomplete="off" value="{$data.care_point}"
 							class="layui-input" disabled="disabled" />
 					</div>
 				</div>
 				<div class="layui-form-item">
 					<label class="layui-form-label">回复内容</label>
 					<div class="layui-input-block">
-						<div class="layui-textarea" id="reply" name="reply" style="width: 100%;height: 200px;"
-							disabled="disabled">{$data.content}</div>
+						<div class="layui-textarea" id="reply" name="replay" style="width: 100%;height: 200px;"
+							disabled="disabled">{$data.replay}</div>
 					</div>
 				</div>
 				<input type="hidden" value="{$data.id}" name="id" />
