--- a/application/admin/view/shop/index.html
+++ b/application/admin/view/shop/index.html
@@ -49,26 +49,10 @@
                     , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'name', title: '商家名称', width: '15%' }
                     , { field: 'cate_title', title: '所属分类', width: '8%' }
-                    , { field: 'citys', title: '所属城市', width: '8%',
-                        templet:function(d){
-                            return d.province_name+'-'+d.city_name+'-'+d.county_name;
-                        }
-                    }
+                    , { field: 'area', title: '所属城市', width: '8%',}
                     , { field: 'realname', title: '所属用户', width: '8%'}
                     , { field: 'uname', title: '账号', width: '8%'}
-                    , { field: 'rank', title: '会员等级', width: '10%',
-                        templet:function(d){
-                            if(d.rank_id == '1'){
-                                return '银牌会员';
-                            }else if(d.rank_id == '2'){
-                                return '金牌会员';
-                            }else if(d.rank_id == '3'){
-                                return '钻石会员';
-                            }else{
-                                return '';
-                            }
-                        }
-                    }
+                    , { field: 'rank_name', title: '会员等级', width: '10%',}
                     , { field: 'superior_id', title: '上级会员', width: '8%'}
                     , { field: 'subor', title: '下级数量', width: '8%'}
                     , { field: 'mobile', title: '联系电话', width: '8%'}
